--- a/static/sass/Profile/ProfileDumb.sass
+++ b/static/sass/Profile/ProfileDumb.sass
@@ -132,6 +132,7 @@
 						display: flex
 						align-items: center
 						justify-content: center
+						bottom: 0
 
 						a
 							margin-right: 0.5rem
@@ -161,7 +162,7 @@
 
 		.edit-social-mobile--wrapper
 			display: flex
-			flex-direction: column	
+			flex-direction: column
 			min-height: 10rem
 			margin-top: calc(-#{$margin-bottom} + 1rem)
 			margin-bottom: 1rem
@@ -170,7 +171,7 @@
 			margin-right: auto
 			margin-left: auto
 
-			@import './ProfileEditLinks'	
+			@import './ProfileEditLinks'
 
 		.edit-social-mobile--wrapper.hidden
 			display: none
@@ -272,7 +273,7 @@
 
 			.edit-social-mobile--wrapper
 				display: flex
-				flex-direction: column	
+				flex-direction: column
 				min-height: 10rem
 				margin-top: calc(-#{$margin-bottom} + 1rem)
 				margin-bottom: 1rem
@@ -281,7 +282,7 @@
 				margin-right: auto
 				margin-left: auto
 
-				@import './ProfileEditLinks'	
+				@import './ProfileEditLinks'
 
 			.edit-social-mobile--wrapper.hidden
 				display: none
